hphp/hack/test/typecheck/shape_idx_generic1.php.like_types.exp
File "shape_idx_generic1.php", line 5, characters 22-23:
Invalid argument (Typing[4110])
File "shape_idx_generic1.php", line 5, characters 22-23:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_generic1.php", line 4, characters 45-45:
But got T
